--- a/Weather Visualization/index.html
+++ b/Weather Visualization/index.html
@@ -24,6 +24,19 @@
     <script src="InfoPage.js"         type="text/javascript"></script>
     <script src="Custom.js"           type="text/javascript"></script>
 
+    <!--<script type="text/javascript">-->
+      <!--function downloadJSAtOnload() {-->
+        <!--var element = document.createElement("script");-->
+        <!--element.src = "defer.js";-->
+        <!--document.body.appendChild(element);-->
+      <!--}-->
+      <!--if (window.addEventListener)-->
+        <!--window.addEventListener("load", downloadJSAtOnload, false);-->
+      <!--else if (window.attachEvent)-->
+        <!--window.attachEvent("onload", downloadJSAtOnload);-->
+      <!--else window.onload = downloadJSAtOnload;-->
+    <!--</script>-->
+
     <style>
       body {
         padding: 0;
