--- a/Weather Visualization/index.html
+++ b/Weather Visualization/index.html
@@ -4,25 +4,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Weather Visualization</title>
-    <script src="library/p5.js"       type="text/javascript"></script>
-    <script src="library/p5.dom.js"   type="text/javascript"></script>
-    <script src="library/p5.sound.js" type="text/javascript"></script>
-
-    <script src="Sketch.js"           type="text/javascript"></script>
-    <script src="PixelObjects.js"     type="text/javascript"></script>
-    <script src="Text.js"             type="text/javascript"></script>
-    <script src="Cities.js"           type="text/javascript"></script>
-    <script src="Circle.js"           type="text/javascript"></script>
-    <script src="World.js"            type="text/javascript"></script>
-    <script src="APIFunctions.js"     type="text/javascript"></script>
-    <script src="Pixel.js"            type="text/javascript"></script>
-    <script src="Time.js"             type="text/javascript"></script>
-    <script src="Sky.js"              type="text/javascript"></script>
-    <script src="SunMoon.js"          type="text/javascript"></script>
-    <script src="Weather.js"          type="text/javascript"></script>
-    <script src="WeatherSeverity.js"  type="text/javascript"></script>
-    <script src="InfoPage.js"         type="text/javascript"></script>
-    <script src="Custom.js"           type="text/javascript"></script>
+    <!--<script src="library/p5.js"       type="text/javascript"></script>-->
+    <!--<script src="library/p5.dom.js"   type="text/javascript"></script>-->
+    <!--<script src="library/p5.sound.js" type="text/javascript"></script>-->
 
     <!--<script type="text/javascript">-->
       <!--function downloadJSAtOnload() {-->
